// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`workspace tool surface > system prompt is stable 1`] = `
"# Identity
- You are ThinkEx's workspace assistant.
- Help the user understand, organize, and work in their actual ThinkEx workspace.

# Workspace Boundaries
- Actual workspace means user-visible ThinkEx content. Private sandbox means assistant-only scratch files.
- Use actual workspace tools to inspect workspace contents; change the workspace only through actual workspace mutation tools.
- Never use private sandbox files as user-visible workspace items.
- Do not claim to have read actual workspace content unless an actual workspace tool returned it.
- Resolve this/it/that/here/above/the page/this file from current-turn context: selected quotes, then active view, then active/open items. Ask briefly before changes if ambiguous.
- Treat workspace relationships as ambient navigation and provenance context. Use them silently to find and understand relevant items; do not present routine relationship maintenance as user-facing work. Mention relationships only when the user asks about them or when one materially affects the answer.
- Web tools read public web content only.

# Tool Use
- Follow tool descriptions and schemas.
- Whenever you call a user-visible tool, provide a short plain-English title for that tool call. Treat the title as required, not optional.
- Tool titles must be present-progressive activity phrases like 'Reading workspace', 'Researching sources', or 'Updating workspace'.
- Use time_get_current for exact time in UTC or a requested IANA time zone, and time_calculate_relative for exact relative time math; the current turn includes user-local date/time context.

# Response Style
- Answer directly first. Be clear, specific, and non-redundant.
- Match depth to the task: stay brief for simple questions; explain from first principles when teaching, debugging, comparing options, or recommending a path.
- Treat user claims as hypotheses, not facts. Evaluate them against the available context before agreeing, and challenge weak assumptions directly but respectfully.
- State assumptions, uncertainty, and tradeoffs when they matter. Use examples, steps, or comparisons only when they make the answer easier to act on.
- Do not open with praise, flattery, or generic validation such as 'You're absolutely right', 'Great question', or 'Good catch'. Avoid filler, repeated restatements, and unnecessary summary sections.

# Output Format
- Format final answers as GitHub-flavored Markdown. Use concise headings, lists, blockquotes, links, tables, task lists, strikethrough, and fenced code blocks with language tags when they improve clarity.
- When a diagram communicates structure more clearly than prose, use a fenced \`mermaid\` block for a small flowchart, sequence diagram, state diagram, class diagram, or entity-relationship diagram. Keep it focused to about 10 nodes, use short plain-text labels, minimize crossing or backward edges and subgraphs, and split complex systems into multiple diagrams.
- Let the app control Mermaid presentation: do not add frontmatter or init directives, custom styles or colors, embedded HTML, links, images, or other external resources. Include a concise \`accTitle\` and \`accDescr\` describing the diagram.
- When writing Markdown with math, use \`$...$\` for inline math and \`$$...$$\` on separate lines for block math. Do not use \`\\(...\\)\` or \`\\[...\\]\`; our renderer only understands dollar-sign delimiters.
- Chemistry renders with \`\\ce{...}\` (e.g. \`$\\ce{CH4 + 2 O2 -> CO2 + 2 H2O}$\`) and quantities with units render with \`\\pu{...}\`.
- CRITICAL, in chat replies only: every literal dollar sign — every price, cost, salary, or currency figure — MUST be escaped as \`\\$\`. Write \`\\$5\`, not \`$5\`. Write \`\\$1,000 − \\$200 = \\$800\`, not \`$1,000 − $200 = $800\`. A missed escape turns the price into broken math on screen.
- That escape is a Markdown rule and applies to chat replies only. Document and widget content is HTML, where \`\\$\` renders as a visible backslash — write money plainly there, as \`$30\`.

# Memory
- Use memory only for durable preferences, workspace goals, thread goals, and decisions. Do not store transient requests, secrets, full documents, item bodies, or actual workspace state."
`;

exports[`workspace tool surface > workspace_create_items input schema is stable 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "properties": {
    "items": {
      "description": "One or more folders or documents to create in order, at most 20. Parent folders must already exist or be created earlier in the same request.",
      "items": {
        "anyOf": [
          {
            "additionalProperties": false,
            "properties": {
              "path": {
                "description": "Final absolute path for the folder to create.",
                "minLength": 1,
                "type": "string",
              },
              "relations": {
                "description": "Optional relationships from this new folder to other workspace items, at most 20.",
                "items": {
                  "additionalProperties": false,
                  "properties": {
                    "kind": {
                      "description": "\`derived_from\` means this item was created or materially changed from the linked item. \`references\` means this item cites or points to the linked item.",
                      "enum": [
                        "derived_from",
                        "references",
                      ],
                      "type": "string",
                    },
                    "note": {
                      "description": "Optional short source detail, like pages 12-14 or section on photosynthesis.",
                      "maxLength": 240,
                      "type": "string",
                    },
                    "path": {
                      "description": "Absolute path of the related ThinkEx workspace item.",
                      "minLength": 1,
                      "type": "string",
                    },
                  },
                  "required": [
                    "kind",
                    "path",
                  ],
                  "type": "object",
                },
                "maxItems": 20,
                "type": "array",
              },
              "type": {
                "const": "folder",
                "type": "string",
              },
            },
            "required": [
              "type",
              "path",
            ],
            "type": "object",
          },
          {
            "additionalProperties": false,
            "properties": {
              "initialContent": {
                "description": "Optional initial HTML content for the document.",
                "maxLength": 512000,
                "type": "string",
              },
              "path": {
                "description": "Final absolute path for the document to create.",
                "minLength": 1,
                "type": "string",
              },
              "relations": {
                "description": "Optional relationships from this new document to other workspace items, at most 20.",
                "items": {
                  "additionalProperties": false,
                  "properties": {
                    "kind": {
                      "description": "\`derived_from\` means this item was created or materially changed from the linked item. \`references\` means this item cites or points to the linked item.",
                      "enum": [
                        "derived_from",
                        "references",
                      ],
                      "type": "string",
                    },
                    "note": {
                      "description": "Optional short source detail, like pages 12-14 or section on photosynthesis.",
                      "maxLength": 240,
                      "type": "string",
                    },
                    "path": {
                      "description": "Absolute path of the related ThinkEx workspace item.",
                      "minLength": 1,
                      "type": "string",
                    },
                  },
                  "required": [
                    "kind",
                    "path",
                  ],
                  "type": "object",
                },
                "maxItems": 20,
                "type": "array",
              },
              "type": {
                "const": "document",
                "type": "string",
              },
            },
            "required": [
              "type",
              "path",
            ],
            "type": "object",
          },
        ],
      },
      "maxItems": 20,
      "minItems": 1,
      "type": "array",
    },
  },
  "required": [
    "items",
  ],
  "type": "object",
}
`;

exports[`workspace tool surface > workspace_delete_items input schema is stable 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "properties": {
    "paths": {
      "description": "Absolute paths of one or more actual ThinkEx workspace items to delete, at most 20.",
      "items": {
        "minLength": 1,
        "type": "string",
      },
      "maxItems": 20,
      "minItems": 1,
      "type": "array",
    },
  },
  "required": [
    "paths",
  ],
  "type": "object",
}
`;

exports[`workspace tool surface > workspace_edit_item input schema is stable 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "properties": {
    "edits": {
      "description": "Ordered edits, at most 40. Target a block by copying its data-ref into the "ref" field (these are local to the document, not workspace citation refs). Use replace_text to change text inside one block, including a widget's source. Use overwrite only to discard the entire document and write a new one.",
      "items": {
        "anyOf": [
          {
            "additionalProperties": false,
            "properties": {
              "html": {
                "description": "Schema-constrained HTML fragment. Model-supplied data-ref attributes are ignored.",
                "maxLength": 512000,
                "type": "string",
              },
              "op": {
                "enum": [
                  "insert_after",
                  "insert_before",
                  "replace",
                ],
                "type": "string",
              },
              "ref": {
                "description": "Exact data-ref from a recent HTML read. Put it in the "ref" field, never "target".",
                "maxLength": 64,
                "minLength": 1,
                "type": "string",
              },
            },
            "required": [
              "html",
              "op",
              "ref",
            ],
            "type": "object",
          },
          {
            "additionalProperties": false,
            "properties": {
              "op": {
                "const": "delete",
                "type": "string",
              },
              "ref": {
                "description": "Exact data-ref from a recent HTML read. Put it in the "ref" field, never "target".",
                "maxLength": 64,
                "minLength": 1,
                "type": "string",
              },
            },
            "required": [
              "op",
              "ref",
            ],
            "type": "object",
          },
          {
            "additionalProperties": false,
            "properties": {
              "html": {
                "description": "Schema-constrained HTML fragment. Model-supplied data-ref attributes are ignored.",
                "maxLength": 512000,
                "type": "string",
              },
              "op": {
                "const": "overwrite",
                "type": "string",
              },
            },
            "required": [
              "html",
              "op",
            ],
            "type": "object",
          },
          {
            "additionalProperties": false,
            "properties": {
              "find": {
                "description": "Exact text to replace inside the target block, copied from a read. It must appear exactly once in that block; if it matches more than once the edit fails instead of replacing every occurrence.",
                "maxLength": 512000,
                "minLength": 1,
                "type": "string",
              },
              "op": {
                "const": "replace_text",
                "type": "string",
              },
              "ref": {
                "description": "Exact data-ref from a recent HTML read. Put it in the "ref" field, never "target".",
                "maxLength": 64,
                "minLength": 1,
                "type": "string",
              },
              "replace": {
                "description": "Replacement text. May be empty to delete the matched text.",
                "maxLength": 512000,
                "type": "string",
              },
            },
            "required": [
              "find",
              "op",
              "ref",
              "replace",
            ],
            "type": "object",
          },
        ],
      },
      "maxItems": 40,
      "minItems": 1,
      "type": "array",
    },
    "path": {
      "description": "Absolute path of one actual ThinkEx workspace item to edit.",
      "minLength": 1,
      "type": "string",
    },
  },
  "required": [
    "path",
    "edits",
  ],
  "type": "object",
}
`;

exports[`workspace tool surface > workspace_link_items input schema is stable 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "properties": {
    "path": {
      "description": "Absolute path of the workspace item to link from.",
      "minLength": 1,
      "type": "string",
    },
    "relations": {
      "description": "Relationships from this item to other workspace items, at most 20.",
      "items": {
        "additionalProperties": false,
        "properties": {
          "kind": {
            "description": "\`derived_from\` means this item was created or materially changed from the linked item. \`references\` means this item cites or points to the linked item.",
            "enum": [
              "derived_from",
              "references",
            ],
            "type": "string",
          },
          "note": {
            "description": "Optional short source detail, like pages 12-14 or section on photosynthesis.",
            "maxLength": 240,
            "type": "string",
          },
          "path": {
            "description": "Absolute path of the related ThinkEx workspace item.",
            "minLength": 1,
            "type": "string",
          },
        },
        "required": [
          "kind",
          "path",
        ],
        "type": "object",
      },
      "maxItems": 20,
      "minItems": 1,
      "type": "array",
    },
  },
  "required": [
    "path",
    "relations",
  ],
  "type": "object",
}
`;

exports[`workspace tool surface > workspace_list_items input schema is stable 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "properties": {
    "offset": {
      "description": "Zero-based item offset. Use nextOffset from the previous result to continue.",
      "maximum": 9007199254740991,
      "minimum": 0,
      "type": "integer",
    },
    "path": {
      "description": "Absolute path in the actual ThinkEx workspace. Defaults to /.",
      "minLength": 1,
      "type": "string",
    },
    "recursive": {
      "description": "Include nested descendants. Defaults to false for immediate children only.",
      "type": "boolean",
    },
  },
  "type": "object",
}
`;

exports[`workspace tool surface > workspace_move_items input schema is stable 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "properties": {
    "destinationPath": {
      "description": "Absolute path of the destination folder. Use / for the workspace root.",
      "minLength": 1,
      "type": "string",
    },
    "paths": {
      "description": "Absolute paths of one or more actual ThinkEx workspace items to move, at most 20.",
      "items": {
        "minLength": 1,
        "type": "string",
      },
      "maxItems": 20,
      "minItems": 1,
      "type": "array",
    },
  },
  "required": [
    "destinationPath",
    "paths",
  ],
  "type": "object",
}
`;

exports[`workspace tool surface > workspace_read_items input schema is stable 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "properties": {
    "requests": {
      "description": "Ordered workspace content reads, at most 20.",
      "items": {
        "anyOf": [
          {
            "additionalProperties": false,
            "properties": {
              "mode": {
                "const": "start",
                "type": "string",
              },
              "path": {
                "description": "Absolute path of the workspace item to read.",
                "minLength": 1,
                "type": "string",
              },
            },
            "required": [
              "path",
              "mode",
            ],
            "type": "object",
          },
          {
            "additionalProperties": false,
            "properties": {
              "mode": {
                "const": "pages",
                "type": "string",
              },
              "path": {
                "description": "Absolute path of the workspace item to read.",
                "minLength": 1,
                "type": "string",
              },
              "range": {
                "description": "Up to 20 physical pages from an extracted file, like 1, 3, 5-7, or 1,4-6. Defaults to page 1.",
                "minLength": 1,
                "pattern": "^\\d+(?:\\s*-\\s*\\d+)?(?:\\s*,\\s*\\d+(?:\\s*-\\s*\\d+)?)*$",
                "type": "string",
              },
            },
            "required": [
              "path",
              "mode",
              "range",
            ],
            "type": "object",
          },
          {
            "additionalProperties": false,
            "properties": {
              "cursor": {
                "description": "Opaque cursor returned by a previous read.",
                "maxLength": 4096,
                "minLength": 1,
                "type": "string",
              },
              "mode": {
                "const": "continue",
                "type": "string",
              },
              "path": {
                "description": "Absolute path of the workspace item to read.",
                "minLength": 1,
                "type": "string",
              },
            },
            "required": [
              "path",
              "cursor",
              "mode",
            ],
            "type": "object",
          },
          {
            "additionalProperties": false,
            "properties": {
              "mode": {
                "const": "block",
                "type": "string",
              },
              "path": {
                "description": "Absolute path of the workspace item to read.",
                "minLength": 1,
                "type": "string",
              },
              "ref": {
                "description": "data-ref of one block from an earlier read of this document, returned in full. Reads elide a widget's source, so this is how to fetch it before editing.",
                "minLength": 1,
                "type": "string",
              },
            },
            "required": [
              "path",
              "mode",
              "ref",
            ],
            "type": "object",
          },
        ],
      },
      "maxItems": 20,
      "minItems": 1,
      "type": "array",
    },
  },
  "required": [
    "requests",
  ],
  "type": "object",
}
`;

exports[`workspace tool surface > workspace_rename_item input schema is stable 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "properties": {
    "name": {
      "description": "New user-visible item name.",
      "maxLength": 160,
      "minLength": 1,
      "type": "string",
    },
    "path": {
      "description": "Absolute path of one actual ThinkEx workspace item to rename.",
      "minLength": 1,
      "type": "string",
    },
  },
  "required": [
    "name",
    "path",
  ],
  "type": "object",
}
`;

exports[`workspace tool surface > workspace_search input schema is stable 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "properties": {
    "path": {
      "description": "Optional absolute workspace path. A folder searches recursively; an item searches only that item. Defaults to /.",
      "minLength": 1,
      "type": "string",
    },
    "query": {
      "description": "Text or natural-language question to search for in the workspace.",
      "maxLength": 1000,
      "minLength": 2,
      "type": "string",
    },
    "types": {
      "description": "Optional content types to include. Defaults to documents and files.",
      "items": {
        "enum": [
          "document",
          "file",
        ],
        "type": "string",
      },
      "minItems": 1,
      "type": "array",
    },
  },
  "required": [
    "query",
  ],
  "type": "object",
}
`;
